vlib/v/checker/tests/cast_function_to_number_err.vv
struct VecLike {}

fn (v VecLike) magnitude() f64 {
	return 1.0
}

fn main() {
	a := VecLike{}
	println(f64(a.magnitude))
}
